--- a/src/pages/ProjectPage/Planning/SprintColumnHeader/SprintColumnHeader.scss
+++ b/src/pages/ProjectPage/Planning/SprintColumnHeader/SprintColumnHeader.scss
@@ -10,17 +10,18 @@
 
   @include tablet {
     flex-wrap: wrap;
+    justify-content: space-between;
   }
 
   .selectWrapper {
     flex-grow: 1;
     max-width: 433px;
-    width: 100%;
     margin-right: 1rem;
 
-    @include tablet {
+    @include phone {
       margin-bottom: 1rem;
-      margin-right: 0;
+      width: auto;
+      max-width: none;
     }
   }
 }
@@ -29,6 +30,12 @@
   flex-basis: 50%;
   max-width: calc(50% - 37px);
   padding: 0 0.5rem;
+
+  @include phone {
+    flex-basis: auto;
+    width: 100%;
+    max-width: none;
+  }
 }
 
 .progressBarWrapper {
